cabal-version:      2.4
name:               hskNorem
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Anton Ping
maintainer:         antonping1999@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hskNorem
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
          Utils
        , Parse
        , Super
        , Compile
        , TypeInfer
        , Repl
        , Module
        , ASM

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.3.0
        , parsec >= 3.1.15.0
        , containers >= 0.6.5.1
        , mtl >= 2.2.2
        , text >= 1.2.4.1
        , haskeline >= 0.8.2
        , repline >= 0.4.0.0
        , prettyprinter >= 1.7.1
    hs-source-dirs:   app
    default-language: Haskell2010
